--- a/name.html
+++ b/name.html
@@ -15,7 +15,7 @@
     <center><h1>Hola profe, Soy Lexly :D </h1>
     <img src="https://static.wikia.nocookie.net/gatopedia/images/2/2e/El_gatoo.png/revision/latest?cb=20230103150310&path-prefix=es" alt="centered image" height="300" width="300">
     <span>
-        <p style="font-style: italic">Lexly sanchez. Estoy en el grupo 1 de metodologias pero voy los viernes.</p></center>
+        <p style="font-style: italic">Lexly sanchez, código: 2324805-3744. Estoy en el grupo 1 de metodologias pero voy los viernes.</p></center>
   </span>
 </body>
 </html>
