se agrega la materia

--- a/name.html
+++ b/name.html
@@ -5,6 +5,7 @@
   <title>Hola</title>
   <style>
     h1 {color:#dbf7a6;}
+    h3 {color:#ada6f7;}
     p {color:#bcfeff;}
   </style>
 
@@ -12,10 +13,13 @@
 <body>
 
     <body background="https://cdn.pixabay.com/photo/2016/07/10/11/55/cat-1507600_1280.jpg">
-    <center><h1>Hola profe, Soy Lexly :D </h1>
+    <center>
+    <h1>Hola profe, Soy Lexly :D </h1>
     <img src="https://static.wikia.nocookie.net/gatopedia/images/2/2e/El_gatoo.png/revision/latest?cb=20230103150310&path-prefix=es" alt="centered image" height="300" width="300">
     <span>
-        <p style="font-style: italic">Lexly sanchez, código: 2324805-3744. Estoy en el grupo 1 de metodologias pero voy los viernes.</p></center>
-  </span>
+    <p style="font-style: italic">Lexly sanchez, código: 2324805-3744. Estoy en el grupo 1 de metodologias pero voy los viernes.</p>
+    <h3>Metodologías de desarrollo de software</h3>
+    </span>
+    </center>
 </body>
 </html>
